# RepoPilot-SWE-Multi-agent

./: .gitignore  AGENTS.md  Plan.md  README.md  pyproject.toml
benchmarks/: README.md
benchmarks/_template_adhoc/: README.md  config.phase_d.example.yaml  config.yaml  config.yaml.example  issue.generated.example.md  issue.md  pin_base_commit.py
benchmarks/adhoc_coach_agent/: README.md  config.yaml  issue.md
benchmarks/adhoc_parser_empty/: README.md  config.yaml  issue.md
benchmarks/adhoc_parser_generated/: README.md  config.yaml  issue.md  pin_base_commit.py
benchmarks/task_001_sudoku/: config.yaml  issue.md  setup.patch
benchmarks/task_002_eval_module/: config.yaml  issue.md  setup.patch
benchmarks/task_003_expr_multi/: config.yaml  issue.md  setup.patch
benchmarks/task_004_expr_api_mismatch/: config.yaml  issue.md  setup.patch
benchmarks/task_005_serialize_unset/: config.yaml  issue.md  setup.patch
benchmarks/task_006_sudoku_logic/: config.yaml  issue.md  setup.patch
benchmarks/task_007_eval_import/: config.yaml  issue.md  setup.patch
benchmarks/task_008_expr_divzero/: config.yaml  issue.md  setup.patch
benchmarks/task_009_serialize_none/: config.yaml  issue.md  setup.patch
benchmarks/task_010_expr_whitespace/: config.yaml  issue.md  setup.patch
benchmarks/task_011_sudoku_multi3/: config.yaml  issue.md  setup.patch
benchmarks/task_012_expr_multi4/: config.yaml  issue.md  (+1 more)
scripts/: extract_baseline.py  repro_sudoku.sh  verify_benchmark_patches.py
upstream/: .pre-commit-config.yaml  AGENTS.md  README.md  mkdocs.yml  pyproject.toml
(+172 files in other folders)
